# spi_test_slave

./: CMakeLists.txt  main.cpp  pico-ssd1306
